--- a/docs/src/pages/index.module.css
+++ b/docs/src/pages/index.module.css
@@ -1,23 +1,94 @@
-/**
- * CSS files with the .module.css suffix will be treated as CSS modules
- * and scoped locally.
- */
+/* src/pages/index.module.css */
 
 .heroBanner {
+  /*background: linear-gradient(135deg, #555be7, #8c41e9);*/
+  background: linear-gradient(135deg,
+  rgb(227, 153, 18),  /* Orange */
+  rgb(243, 43, 82),   /* Red-Pink */
+  rgb(15, 104, 140),  /* Teal */
+  rgb(10, 207, 217),  /* Cyan */
+  rgb(15, 104, 140),  /* Teal */
+  rgb(243, 43, 82),   /* Red-Pink */
+  rgb(194, 144, 19)   /* Yellow */
+  );
+  color: #fff;
   padding: 4rem 0;
   text-align: center;
-  position: relative;
-  overflow: hidden;
+  background-size: 400% 400%;
+  will-change: background-position;
+  animation: gradientShift 10s linear infinite;
 }
 
-@media screen and (max-width: 996px) {
-  .heroBanner {
-    padding: 2rem;
+@keyframes gradientShift {
+  0% {
+    background-position: 0% 100%;
   }
+  100% {
+    background-position: 100% 0%;
+  }
+}
+
+.heroTitle {
+  font-size: 3rem;
+  margin-bottom: 0.5rem;
+}
+
+.heroSubtitle {
+  font-size: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .buttons {
   display: flex;
-  align-items: center;
   justify-content: center;
+  gap: 1rem;
+}
+
+.announcement {
+  padding: 2rem 0;
+  text-align: center;
+}
+
+.announcementContent {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.announcementImage {
+  max-width: 100%;
+  display: block;
+  margin: 2rem auto 0;
+}
+
+.benefits {
+  padding: 2rem 0;
+  /*text-align: center;*/
+}
+
+.benefit {
+  /*border: 1px solid var(--ifm-color-emphasis-200);*/
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem 0;
+  transition: transform 0.3s, box-shadow 0.3s;
+}
+
+/*.benefit:hover {*/
+/*transform: scale(1.05);*/
+/*box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);*/
+/*}*/
+
+.community {
+  padding: 4rem 0;
+  text-align: center;
+}
+
+.communityLinks {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.communityLinks .button {
+  font-size: 1.2rem;
 }
