--- a/docs/static/css/custom.css
+++ b/docs/static/css/custom.css
@@ -1,3 +1,4 @@
+
 html[data-theme='light'] {
     --ifm-color-primary-lightest: #cdfcbf;
     --ifm-color-primary-lighter: #96ee85;
@@ -23,7 +24,7 @@ html[data-theme='dark'] {
 }
 
 /* Custom styles for details and summary tags */
-details {
+.details_node_modules-\@docusaurus-theme-classic-lib-theme-Details-styles-module {
     border: 1px solid var(--ifm-color-emphasis-300) !important;
     background-color: var(--ifm-background-color) !important;
     border-radius: 4px;
