--- a/docs/src/css/custom.css
+++ b/docs/src/css/custom.css
@@ -6,36 +6,35 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary-lightest: #cdfcbf;
-  --ifm-color-primary-lighter: #96ee85;
-  --ifm-color-primary-light: #27bb36;
-  --ifm-color-primary: #009112;
-  --ifm-color-primary-dark: #007c0f;
-  --ifm-color-primary-darker: #00670f;
+  --ifm-color-primary-lightest: #fdd1c7;
+  --ifm-color-primary-lighter: #fb9a80;
+  --ifm-color-primary-light: #f57058;
+  --ifm-color-primary: #f25a38;
+  --ifm-color-primary-dark: #cf4e30;
+  --ifm-color-primary-darker: #aa3f28;
   --ifm-code-font-size: 95%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
-
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary-lightest: #b4f7a2;
-  --ifm-color-primary-lighter: #73e06b;
-  --ifm-color-primary-light: #2dbf3a;
-  --ifm-color-primary: #0dab25;
-  --ifm-color-primary-dark: #009714;
-  --ifm-color-primary-darker: #00840f;
+  --ifm-color-primary-lightest: #fdd1c7;
+  --ifm-color-primary-lighter: #fb9a80;
+  --ifm-color-primary-light: #f57058;
+  --ifm-color-primary: #f25a38;
+  --ifm-color-primary-dark: #cf4e30;
+  --ifm-color-primary-darker: #aa3f28;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 
 html[data-theme='light'] {
-  --ifm-color-primary-lightest: #cdfcbf;
-  --ifm-color-primary-lighter: #96ee85;
-  --ifm-color-primary-light: #27bb36;
-  --ifm-color-primary: #009112;
-  --ifm-color-primary-dark: #007c0f;
-  --ifm-color-primary-darker: #00670f;
+  --ifm-color-primary-lightest: #fdd1c7;
+  --ifm-color-primary-lighter: #fb9a80;
+  --ifm-color-primary-light: #f57058;
+  --ifm-color-primary: #f25a38;
+  --ifm-color-primary-dark: #cf4e30;
+  --ifm-color-primary-darker: #aa3f28;
 
   /* Update other color variables if needed */
   --ifm-link-color: var(--ifm-color-primary);
@@ -45,12 +44,12 @@ html[data-theme='light'] {
 
 /* Dark mode adjustments */
 html[data-theme='dark'] {
-  --ifm-color-primary-lightest: #b4f7a2;
-  --ifm-color-primary-lighter: #73e06b;
-  --ifm-color-primary-light: #2dbf3a;
-  --ifm-color-primary: #0dab25;
-  --ifm-color-primary-dark: #009714;
-  --ifm-color-primary-darker: #00840f;
+  --ifm-color-primary-lightest: #fdd1c7;
+  --ifm-color-primary-lighter: #fb9a80;
+  --ifm-color-primary-light: #f57058;
+  --ifm-color-primary: #f25a38;
+  --ifm-color-primary-dark: #cf4e30;
+  --ifm-color-primary-darker: #aa3f28;
 }
 
 /* Custom styles for details and summary tags */
